tests/typing/faulty_if_expressions.sy
start :: fn do
    1.0 + 1.0 if true else 2.0
    (1.0 if < 0.0 else 2.0) + 1.0
    1.0 + 1.0 if "potato" else 2.0
    (1.0 if < "abc" else 2.0) + 1.0
end
// error: $Mismatch { expected: Type::Bool, .. }
// error: $BinOp { lhs: Type::Float, .. }
